--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,179 @@
 /* Your stylesheet goes here */
+@import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css);
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300italic,300);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,300);
+
+body {
+    font-family:"Lato", Helvetica Neue, Helvetica, sans-serif;
+    font-size:16px;
+    font-weight:300;
+    background-color:#E9EAEE;
+}
+h1, h2, h3, h4, h5, h6 {
+	font-family:"Raleway", Helvetica Neue, Helvetica, sans-serif;
+}
+h2 {
+	color:#BC6026;
+}
+svg {
+	height:1em;
+	fill:white;
+	fill:currentColor;
+}
+#navBar {
+	font-size:16px;
+}
+#mainNav {
+	overflow:hidden;
+	background:#181C22;
+	margin:0;
+}
+#mainNav ul {
+	list-style-type:none;
+	height:1em;
+	margin:0;
+	padding:0;
+}
+#mainNav ul li {
+	display:inline;
+	list-style-type:none;
+	float:left;
+	font-variant:small-caps;
+}
+#theIcon {
+	padding-left:15px;
+}
+#mainNav ul li a {
+	padding:0.5em;
+	text-decoration:none;
+	display:block;
+	color:white;
+}
+#mainNav a:hover {
+	color:#D87E28;
+}
+#motto {
+	display:none;
+}
+#header {
+	padding-top:3em;
+	padding-right:3em;
+}
+#headline {
+	font-style:italic;
+}
+#icon {
+	display:none;
+	color:#D87E28
+}
+#information {
+	text-align:center;
+	background-color:#dbdce3;
+	background-size:cover;
+	width:100%;
+}
+#map {
+	border:2px none;
+	border-radius:5px;
+}
+#icons {
+	color:#D87E28;
+	height:3em;
+	padding-top:2em;
+	padding-bottom:4em;
+}
+#icons svg {
+	height:2em;
+}
+#menu dd {
+	padding-left:1em;
+	font-style:italic;
+}
+#story {
+	background-color:#dbdce3;
+	background-size:cover;
+	width:100%;
+}
+#story img {
+	float:right;
+	height:300px;
+	margin-left:1em;
+	border:2px none;
+	border-radius:5px;
+}
+#footer {
+	border-style:hidden;
+	border-top:solid #D87E28;
+	background-color:#afb3c2;
+	background-size:cover;
+	width:100%;
+	font-size:12px;
+	padding:1em;
+	clear:both;
+}
+#order {
+	padding-top:1em;
+}
+@media (min-width: 768px) {
+	body {
+		font-size:20px;
+	}
+	h2 {
+		text-align:center;
+		margin-bottom:1em;
+	}
+	#mainNav {
+		background-color:rgba(24, 28, 34, 0.8);
+	}
+	#mainNav ul li a {
+		padding-left:1em;
+		padding-right:1em;
+	}
+	#header {
+		background-image:url(../img/background-sm.jpg);
+		background-repeat:no-repeat;
+		background-size:cover;
+		width:100%;
+		height:550px;
+		color:white;
+		text-align:right;
+	}
+	#motto {
+		display:inherit;
+	}
+	#icon {
+		display:inherit;
+		padding-bottom:1em;
+	}
+	#headline {
+		font-size:1.25em;
+		text-align:center;
+		padding-top:3em;
+		padding-bottom:3em;
+	}
+	#headline svg {
+		height:1.5em;
+	}
+	#story img {
+		height:400px;
+	}
+	#secondBlock {
+		text-align:right;
+	}
+}
+@media (min-width: 992px) {
+	#header {
+		background-image:url(../img/background-md.jpg);
+		background-size:cover;
+		width:100%;
+	}
+	#header h1 {
+		font-size:4em;
+	}
+}
+@media (min-width: 1200px) {
+	#header {
+		background-image:url(../img/background-lg.jpg);
+	}
+}
