--- a/css/main.css
+++ b/css/main.css
@@ -3,19 +3,22 @@
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300italic,300);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300);
-
+/* DEFAULT STYLE FOR BODY */
 body {
     font-family:"Lato", Helvetica Neue, Helvetica, sans-serif;
     font-size:16px;
     font-weight:300;
     background-color:#E9EAEE;
 }
+/* DEFAULT STYLE FOR HEADERS */
 h1, h2, h3, h4, h5, h6 {
 	font-family:"Raleway", Helvetica Neue, Helvetica, sans-serif;
 }
+/* DEFAULT STYLE FOR h2 */
 h2 {
 	color:#BC6026;
 }
+/* STYLE FOR NAVAGATION BAR */
 svg {
 	height:1em;
 	fill:white;
@@ -53,6 +56,7 @@ svg {
 #mainNav a:hover {
 	color:#D87E28;
 }
+/* STYLE FOR HEADING AREA */
 #motto {
 	display:none;
 }
@@ -60,6 +64,7 @@ svg {
 	padding-top:3em;
 	padding-right:3em;
 }
+/* STYLE FOR HEADLINE SECTION */
 #headline {
 	font-style:italic;
 }
@@ -67,6 +72,7 @@ svg {
 	display:none;
 	color:#D87E28
 }
+/* STYLE FOR INFORMATION SECTION */
 #information {
 	text-align:center;
 	background-color:#dbdce3;
@@ -90,6 +96,7 @@ svg {
 	padding-left:1em;
 	font-style:italic;
 }
+/* STYLE FOR OUR STORY SECTION */
 #story {
 	background-color:#dbdce3;
 	background-size:cover;
@@ -102,6 +109,7 @@ svg {
 	border:2px none;
 	border-radius:5px;
 }
+/* STYLE FOR FOOTER */
 #footer {
 	border-style:hidden;
 	border-top:solid #D87E28;
@@ -112,9 +120,11 @@ svg {
 	padding:1em;
 	clear:both;
 }
+/* STYLE FOR ORDER SECTION */
 #order {
 	padding-top:1em;
 }
+/* STYLE ON SCREENS 769px AND WIDER */
 @media (min-width: 768px) {
 	body {
 		font-size:20px;
@@ -123,6 +133,7 @@ svg {
 		text-align:center;
 		margin-bottom:1em;
 	}
+	/* STYLE FOR NAVIGATION BAR */
 	#mainNav {
 		background-color:rgba(24, 28, 34, 0.8);
 	}
@@ -130,6 +141,7 @@ svg {
 		padding-left:1em;
 		padding-right:1em;
 	}
+	/* STYLE FOR HEADER AREA */
 	#header {
 		background-image:url(../img/background-sm.jpg);
 		background-repeat:no-repeat;
@@ -146,6 +158,7 @@ svg {
 		display:inherit;
 		padding-bottom:1em;
 	}
+	/* STYLE FOR HEADLINE SECTION */
 	#headline {
 		font-size:1.25em;
 		text-align:center;
@@ -155,14 +168,18 @@ svg {
 	#headline svg {
 		height:1.5em;
 	}
+	/* STYLE FOR OUR STORY SECTION */
 	#story img {
 		height:400px;
 	}
+	/* STYLE FOR FOOTER */
 	#secondBlock {
 		text-align:right;
 	}
 }
+/* STYLE ON SCREENS 993px AND WIDER */
 @media (min-width: 992px) {
+	/* STYLE FOR HEADER AREA */
 	#header {
 		background-image:url(../img/background-md.jpg);
 		background-size:cover;
@@ -172,7 +189,9 @@ svg {
 		font-size:4em;
 	}
 }
+/* STYLE ON SCREENS 1201px AND WIDER */
 @media (min-width: 1200px) {
+	/* STYLE FOR HEADER AREA */
 	#header {
 		background-image:url(../img/background-lg.jpg);
 	}
